# Carrosserie_Minatchy

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  openapi (2).yml  pyproject.toml
.github/workflows/: docker-publish.yml
assets/: cgv.txt
or_extractor/: __init__.py  cli.py  config.py  models.py  or_generator.py  or_pdf_generator.py  pdf_text.py  pipeline.py  pv_parser.py  text_cleaner.py  web_app.py  zeendoc_client.py
tests/: test_config.py  test_or_pdf_generator.py  test_pv_parser.py  test_text_cleaner.py  test_zeendoc_client.py
